--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-google-maps/api": "^2.19.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.429.0",
     "next": "14.2.6",
+    "nouislider-react": "^3.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
