--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.429.0",
     "next": "14.2.6",
     "nouislider-react": "^3.4.2",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
