--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "aws-sdk": "^2.1685.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
