--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "recharts": "^2.12.7",
+    "svix": "^1.32.0",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
